<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="Kalender">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Judul_Kalender"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/judul_kalender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="@string/masukkan_judul" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/keterangan_Kalender"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/keterangan_kalender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:gravity="top"
            android:hint="@string/Masukkan_Keterangan_Kalender"
            android:inputType="textMultiLine"
            android:lines="3"
            android:maxLines="5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tanggal_kalender"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/tanggal_kalender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusable="false"
                android:hint="@string/pilih_tanggal_kalender" />

            <Button
                android:background="@color/white"
                android:id="@+id/pilih_tanggal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/baseline_calendar_month_24"
                />
        </LinearLayout>

    </LinearLayout>

</ScrollView>